more changes added

--- a/app.json
+++ b/app.json
@@ -3,9 +3,30 @@
     "name": "whatsApp",
     "slug": "whatsApp",
     "version": "1.0.0",
+    "userInterfaceStyle": "light",
+    "splash" : {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
     "assetBundlePatterns": [
       "**/*"
     ]
   },
-  "name": "whatsApp"
+  "ios": {
+    "supportsTablet": true
+  },
+  "android": {
+    "adaptiveIcon": {
+      "foregroundImage": "./assets/adaptive-icon.png",
+      "backgroundColor": "#FFFFFF"
+    }
+  },
+  "web": {
+    "favicon": "./assets/favicon.png"
+  }
+  
 }
